--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ endorsed.javafx.ant.classpath=.
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
 
-user.properties.file=C:\\Users\\alilo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\LEGION\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
