--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,14 @@
+# Do not set application arguments here, this property is re-generated from javafx.param.* properties
+application.args='--add-modules javafx.controls,javafx.media '
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
+compile.on.save=true
+do.depend=false
+do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+javac.debug=true
+javadoc.preview=true
+javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
 
