--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,9 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${libs.MyLibrary.classpath}:\
+    ${javafx.classpath.extension}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
