Setting up signup network request

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,9 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${libs.MyLibrary.classpath}:\
-    ${javafx.classpath.extension}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.Gson.classpath}:\
+    ${libs.JavaDB.classpath}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
