--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,16 @@ dist.jar=${dist.dir}/TicTacToe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.8.2.jar=G:\\ITI Native intake 44\\Java\\Mad Java\\project\\server\\UpdatedProject\\GameServer\\libs\\gson-2.8.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${libs.Gson.classpath}:\
-    ${libs.JavaDB.classpath}:\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
