--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -12,5 +12,5 @@ javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=
 
-user.properties.file=C:\\Users\\dell\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\esraa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
