onlinePlayerlist almost done,but needed to send it to the screen to print it in ui

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${libs.Gson.classpath}:\
-    ${libs.JavaDB.classpath}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
